--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -24,6 +24,9 @@
 	--small-shadow: 0px 3px 10px 0px #8585851A;
 	--big-shadow: 0px 10px 50px 0px #8585850D;
 
+	--color-invalid: #f30707;
+	--color-yellow: #f4aa0a;
+
 	--padding-block-48: 48px 0;
 	--padding-block-80: 80px 0;
 	--padding-block-120: 120px 0;
